add link to blog and update linkedin link

--- a/tex/go-eng.tex
+++ b/tex/go-eng.tex
@@ -12,13 +12,16 @@
 
 {\vspace*{-13mm}\sc \large Anton Grishin — Go Developer} \\
 \begin{resume}
+
   \begin{minipage}[t]{0.55\textwidth}
     \section{\mysidestyle Personal\\Information}
     Moscow, Russia \\
+    \faHome  \space
+    \href{https://alchemmist.xyz}{\texttt{alchemmist.xyz}} \\
     \faGithub  \space
     \href{https://github.com/alchemmist/}{\texttt{alchemmist}} \\
     \faLinkedin \space
-    \href{https://www.linkedin.com/in/anton-grishin-6966a8362/}{\texttt{anton-grishin}}
+    \href{https://www.linkedin.com/in/alchemmist/}{\texttt{alchemmist}}
     \\
     \faPaperPlane \space \href{https://t.me/alchemmist}{\texttt{@alchemmist}} \\
     \faPhone \space
@@ -28,18 +31,27 @@
   \end{minipage}
 
   \begin{minipage}[H]{0.18\textwidth}
-    \begin{textblock}{7}(10.96, 1.30)
-      \includegraphics[width=0.255\textwidth]{../images/avatar.png}
+    % 10.87 1.38
+    \begin{textblock}{7}(10.87, 1.38)
+      \includegraphics[width=0.270\textwidth]{../images/avatar.png}
     \end{textblock}
   \end{minipage}
 
   \vspace{-7mm}
   \section{\mysidestyle About Me}
-  I'm a student and aspiring developer. I've been programming for 4 years, during which I contributed to 44 repositories, made 921 commits, and wrote 176,729 lines of code.
-  I also \href{https://www.avito.ru/moskva/predlozheniya_uslug/prepodavatel_programmirovaniya_na_python_2556461612}{teach} Python and have trained over 30 students. Co-founder and developer at \href{https://ballkit.ru/}{Ballkit}. Former professional \href{https://alchemmist.github.io/CV/attachments/sport.pdf}{volleyball player}.
+  I'm a student and aspiring developer. I've been programming for 4
+  years, during which I contributed to 44 repositories, made 921
+  commits, and wrote 176,729 lines of code.
+  I also
+  \href{https://www.avito.ru/moskva/predlozheniya_uslug/prepodavatel_programmirovaniya_na_python_2556461612}{teach}
+  Python and have trained over 30 students. Co-founder and developer
+  at \href{https://ballkit.ru/}{Ballkit}. Former professional
+  \href{https://alchemmist.github.io/CV/attachments/sport.pdf}{volleyball
+  player}.
 
   \section{\mysidestyle Education}
-  \href{https://centraluniversity.ru/}{Central University} — Mathematics and Computer Science, Class of 2028 \textit{(1st year)}.
+  \href{https://centraluniversity.ru/}{Central University} —
+  Mathematics and Computer Science, Class of 2028 \textit{(1st year)}.
   Major: Software Development. Track: Computer Science Research.
   % TODO: уточнить трек
 
@@ -63,10 +75,13 @@
   \section{\mysidestyle Achievements}
   Reached the \textbf{final}
   (\href{https://alchemmist.github.io/CV/attachments/russian-chemp-final.pdf}{\texttt{1}})
-  of the \href{https://events.fsp-russia.com/championship}{Russian Championship} in competitive programming, among 5,000 participants. Developed a
+  of the \href{https://events.fsp-russia.com/championship}{Russian
+  Championship} in competitive programming, among 5,000 participants.
+  Developed a
   \href{https://alchemmist.github.io/CV/attachments/architect.pdf}{microservice
   architecture} of 9 services for a
-  \href{https://github.com/alchemmist/sportprog}{web application} that aggregates sports events across Russia. Also implemented an
+  \href{https://github.com/alchemmist/sportprog}{web application}
+  that aggregates sports events across Russia. Also implemented an
   \href{https://github.com/alchemmist/sport-afisha/blob/main/event_parsing_service/parse_pdf.py}{algorithm}
   for parsing and verifying annual government reports on sports events.
   Tech stack: \inlinecode{Kafka}, \inlinecode{React},
@@ -74,14 +89,19 @@
   \inlinecode{FastAPI},
   \inlinecode{OAuth}.
 
-  \textbf{\href{https://alchemmist.github.io/CV/attachments/scince-for-life-win.pdf}{Winner}} of the scientific and practical conference
-  “\href{https://conf.profil.mos.ru/academ}{Science for Life}” among 117 projects, with a
-  \href{https://github.com/smart-cab/}{smart home project} for private and public educational institutions.
+  \textbf{\href{https://alchemmist.github.io/CV/attachments/scince-for-life-win.pdf}{Winner}}
+  of the scientific and practical conference
+  “\href{https://conf.profil.mos.ru/academ}{Science for Life}” among
+  117 projects, with a
+  \href{https://github.com/smart-cab/}{smart home project} for
+  private and public educational institutions.
   Tech stack: \inlinecode{Redis},
   \inlinecode{Zigbee2MQTT}, \inlinecode{websockets}, \inlinecode{Go},
   \inlinecode{Python}, \inlinecode{Flask}, \inlinecode{React}.
 
-  \textbf{\href{https://alchemmist.github.io/CV/attachments/informatics-olimpic.pdf}{3rd place prize winner}} in the Moscow State Pedagogical University Informatics Olympiad: “Applied Informatics”
+  \textbf{\href{https://alchemmist.github.io/CV/attachments/informatics-olimpic.pdf}{3rd
+  place prize winner}} in the Moscow State Pedagogical University
+  Informatics Olympiad: “Applied Informatics”
 
   \vspace{-2mm}
   \section{\mysidestyle Experience}\vspace{2mm}
@@ -90,7 +110,8 @@
 
     \item[Patch Loyalty] Loyalty program for small businesses \hfill
       \textsl{July 2024 — August 2024\vspace{1mm}}\\
-      Developed a Telegram bot based on the SMB (Single Message Bot) model in \inlinecode{Go} for a boxed loyalty system:
+      Developed a Telegram bot based on the SMB (Single Message Bot)
+      model in \inlinecode{Go} for a boxed loyalty system:
       \href{https://ballkit.ru}{\texttt{ballkit.ru}}.
 
       \textbf{Technologies:}
@@ -104,14 +125,16 @@
   {\textbf{Formal Verification:} I'm taking the course
     \texttt{\href{https://softwarefoundations.cis.upenn.edu}{softwarefoundations}}.
     Finished the first volume and
-    \href{https://github.com/alchemmist/coq-learning}{proved} 250 theorems in \inlinecode{Coq}.} \\
+    \href{https://github.com/alchemmist/coq-learning}{proved} 250
+  theorems in \inlinecode{Coq}.} \\
 
   \vspace{-6mm}
 
   \textbf{Linux:} I use Arch with the Hyprland compositor. Published my
   \href{https:/github.com/alchemmist/.dotfiles}{\texttt{.dotfiles}}.
   Built my Neovim
-  \href{https://github.com/alchemmist/.dotfiles/tree/main/nvim}{configuration} and
+  \href{https://github.com/alchemmist/.dotfiles/tree/main/nvim}{configuration}
+  and
   \href{https://github.com/alchemmist/nothing.nvim}{colorscheme} from scratch.
   Wrote more than 20 custom
   \href{https://github.com/alchemmist/.dotfiles/tree/main/scripts}{scripts}.
@@ -134,4 +157,3 @@
 \clearpage
 
 \end{document}
-
