--- a/tex/long-eng.tex
+++ b/tex/long-eng.tex
@@ -19,12 +19,13 @@
 \begin{resume}
   \begin{minipage}[t]{0.55\textwidth}
     \section{\mysidestyle Personal\\Information}
-    Anton Grishin \\
     Moscow, Russia \\
+    \faHome  \space
+    \href{https://alchemmist.xyz}{\texttt{alchemmist.xyz}} \\
     \faGithub  \space
     \href{https://github.com/alchemmist/}{\texttt{alchemmist}} \\
     \faLinkedin \space
-    \href{https://www.linkedin.com/in/anton-grishin-6966a8362/}{\texttt{anton-grishin}}
+    \href{https://www.linkedin.com/in/alchemmist/}{\texttt{alchemmist}}
     \\
     \faPaperPlane \space \href{https://t.me/alchemmist}{\texttt{@alchemmist}} \\
     \faPhone \space
@@ -34,8 +35,9 @@
   \end{minipage}
 
   \begin{minipage}[H]{0.18\textwidth}
-    \begin{textblock}{7}(10.84, 1.37)
-      \includegraphics[width=0.27\textwidth]{../images/avatar.png}
+    % 10.87 1.38
+    \begin{textblock}{7}(10.87, 1.38)
+      \includegraphics[width=0.270\textwidth]{../images/avatar.png}
     \end{textblock}
   \end{minipage}
 
