--- a/tex/python-rus.tex
+++ b/tex/python-rus.tex
@@ -14,10 +14,12 @@
   \begin{minipage}[t]{0.55\textwidth}
     \section{\mysidestyle Персональная\\Информация}
     Москва, Россия \\
+    \faHome  \space
+    \href{https://alchemmist.xyz}{\texttt{alchemmist.xyz}} \\
     \faGithub  \space
     \href{https://github.com/alchemmist/}{\texttt{alchemmist}} \\
     \faLinkedin \space
-    \href{https://www.linkedin.com/in/anton-grishin-6966a8362/}{\texttt{anton-grishin}}
+    \href{https://www.linkedin.com/in/alchemmist/}{\texttt{alchemmist}}
     \\
     \faPaperPlane \space \href{https://t.me/alchemmist}{\texttt{@alchemmist}} \\
     \faPhone \space
@@ -27,10 +29,12 @@
   \end{minipage}
 
   \begin{minipage}[H]{0.18\textwidth}
-    \begin{textblock}{7}(10.96, 1.30)
-      \includegraphics[width=0.255\textwidth]{../images/avatar.png}
+    % 10.87 1.38
+    \begin{textblock}{7}(10.87, 1.38)
+      \includegraphics[width=0.270\textwidth]{../images/avatar.png}
     \end{textblock}
   \end{minipage}
+
 
   \vspace{-7mm}
   \section{\mysidestyle Обо мне}
