--- a/tex/short-rus.tex
+++ b/tex/short-rus.tex
@@ -19,7 +19,7 @@
     \faGithub  \space
     \href{https://github.com/alchemmist/}{\texttt{alchemmist}} \\
     \faLinkedin \space
-    \href{https://www.linkedin.com/in/anton-grishin-6966a8362/}{\texttt{anton-grishin}}
+    \href{https://www.linkedin.com/in/alchemmist/}{\texttt{alchemmist}}
     \\
     \faPaperPlane \space \href{https://t.me/alchemmist}{\texttt{@alchemmist}} \\
     \faPhone \space
